# openbench

./: .gitignore  CLAUDE.md  README.md  TODOS.md  pyproject.toml
experiments/: __init__.py  budget_awareness.py  coding_challenge.py  collateral_extreme.py  competitive_programming.py  compute_allocation_strategy.py  compute_allocation_v2.py  compute_allocation_v3.py  context_efficiency.py  context_efficiency_v2.py  context_efficiency_v3.py  context_efficiency_v4.py  context_efficiency_v5.py  context_pressure_30files.py  context_pressure_boundary.py  context_pressure_hard.py  cost_normalized_retry.py  cross_model_refine.py  cross_model_self_correction.py  error_recovery_strategy.py  error_recovery_v2.py  example_system_prompt.py  fewshot_tool_examples.py  injection_stealth.py  model_turns_tradeoff.py  multi_file_project.py  order_system.py  parallel_vs_sequential.py  posture_vs_procedure.py  posture_vs_procedure_sonnet.py  quicktest_model.py  real_model_selection.py  real_model_selection_v2.py  real_prompt_engineering.py  real_prompt_v2.py  realtime_context_update.py  realtime_context_update_v2.py  realtime_context_update_v3.py  realtime_context_update_v4.py  scratchpad_memory.py  (+18 more)
programs/: coding_assistant.json
reports/: 2026-03-17-concise-system-prompt-vs-none.md  2026-03-18-strict-word-limits.md  2026-03-18-tui-ux-research.md  2026-03-19-coding-challenge.md  2026-03-19-multi-file-project.md  2026-03-19-turn-budget-scaling.md  2026-03-19-verified-math-tournament.md  2026-03-20-competitive-programming.md  2026-03-20-order-system.md  2026-03-21-context-efficiency.md  (+18 more)
(+309 files in other folders)
